<?xml version="1.0" encoding="UTF-8"?>

<!-- ====================================================================== -->
<!--                                                                        -->
<!--  JBoss, the OpenSource J2EE webOS                                      -->
<!--                                                                        -->
<!--  Distributable under LGPL license.                                     -->
<!--  See terms of license at http://www.gnu.org.                           -->
<!--                                                                        -->
<!-- ====================================================================== -->

<!-- $Id: pom.xml 3598 2009-01-07 19:21:40Z thomas.diesler@jboss.com $ -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <name>JBoss jBPM3 - Integration</name>
  <groupId>org.jbpm.jbpm3</groupId>
  <artifactId>jbpm-integration-spec</artifactId>
  <packaging>jar</packaging>

  <!-- Parent -->
  <parent>
    <groupId>org.jbpm.jbpm3</groupId>
    <artifactId>jbpm</artifactId>
    <version>3.3.1.GA</version>
    <relativePath>../../pom.xml</relativePath>
  </parent>

  <!-- Properties -->
  <properties>
    <jboss.version>4.2.2.GA</jboss.version>
    <mvel.version>1.3.16-java1.5</mvel.version>
  </properties>

  <!-- Dependencies -->
  <dependencies>
    <dependency>
      <groupId>org.jboss.bpm</groupId>
      <artifactId>bpm-spec-api</artifactId>
    </dependency>
    <dependency>
      <groupId>org.jbpm.jbpm3</groupId>
      <artifactId>jbpm-jpdl</artifactId>
      <version>${version}</version>
    </dependency>
    <dependency>
      <groupId>org.jbpm.jbpm3</groupId>
      <artifactId>jbpm-jpdl</artifactId>
      <classifier>config</classifier>
      <version>${version}</version>
    </dependency>
    <dependency>
      <groupId>org.jbpm.jbpm3</groupId>
      <artifactId>jbpm-identity</artifactId>
      <version>${version}</version>
    </dependency>
    <dependency>
      <groupId>org.jbpm.jbpm3</groupId>
      <artifactId>jbpm-identity</artifactId>
      <classifier>config</classifier>
      <version>${version}</version>
    </dependency>
    <dependency>
      <groupId>org.mvel</groupId>
      <artifactId>mvel</artifactId>
      <version>${mvel.version}</version>
    </dependency>
    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-core</artifactId>
      <version>${hibernate.version}</version>
    </dependency>
    
    <dependency>
      <groupId>org.jboss.client</groupId>
      <artifactId>jbossall-client</artifactId>
      <version>${jboss.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.bpm</groupId>
      <artifactId>bpm-spec-cts</artifactId>
      <scope>test</scope>
      <type>zip</type>
    </dependency>
  </dependencies>
  
  <build>
   <testResources>
    <testResource>
      <directory>src/test/resources</directory>
      <filtering>true</filtering>
    </testResource>
    <testResource>
      <directory>src/cts/resources</directory>
    </testResource>
   </testResources>
   <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>add-test-source</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>add-test-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>src/cts</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-antrun-plugin</artifactId>
        <executions>
          <execution>
            <id>build-test-jars</id>
            <phase>test-compile</phase>
            <goals>
              <goal>run</goal>
            </goals>
            <configuration>
              <target>
                <property name="tests.output.dir" value="${project.build.directory}" />
                <property name="tests.resources.dir" value="${basedir}/src/test/resources" />
                <ant antfile="scripts/antrun-test-jars.xml" target="build-test-jars" />
              </target>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <executions>
          <execution>
            <id>assembly-config</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
            <configuration>
              <finalName>${project.build.finalName}</finalName>
              <appendAssemblyId>true</appendAssemblyId>
              <descriptors>
                <descriptor>scripts/assembly-config.xml</descriptor>
              </descriptors>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-clean-plugin</artifactId>
        <configuration>
          <filesets>
            <fileset>
              <directory>src/cts</directory>
            </fileset>
          </filesets>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <phase>generate-sources</phase>
            <goals>
              <goal>unpack</goal>
            </goals>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>org.jboss.bpm</groupId>
                  <artifactId>bpm-spec-cts</artifactId>
                  <type>zip</type>
                </artifactItem>
              </artifactItems>
              <outputDirectory>src/cts</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>bpm-spec-jbpm3-beans.xml</exclude>
          </excludes>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <systemProperties>
            <property>
              <name>bpm.dialect</name>
              <value>jbpm3</value>
            </property>
            <property>
              <name>bpm.dialect.uri</name>
              <value>urn:jbpm.org:jpdl-3.2</value>
            </property>
            <property>
              <name>log4j.output.dir</name>
              <value>${basedir}/target</value>
            </property>
          </systemProperties>
          <excludes>
            <exclude>org/jboss/bpm/incubator/**/*Test.java</exclude>
          </excludes>
        </configuration>
      </plugin>
     </plugins>
  </build>

  <!--  Profiles -->
  <profiles>
  </profiles>
    
</project>
